--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.14.6",
+    "bcrypt": "^5.0.1",
     "jquery": "^3.6.0",
     "meteor-node-stubs": "^1.0.3"
   },
@@ -17,6 +18,5 @@
       "client": "client/main.js",
       "server": "server/main.js"
     }
-    
   }
 }
